--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore files with extension `.exe` 
 .vscode
 basic/practice
-basic/practice.cpp
+basic/00_practice.cpp
 basic/stack
 basic/queue
 
