--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Ignore files with extension `.exe` 
 .vscode
-basic/practice
+basic/00_practice
 basic/00_practice.cpp
+basic/*
 basic/stack
 basic/queue
-
-
+basic/queue
