--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore files with extension `.exe` 
 .vscode
-basic/0__practice
 basic/0__practice.cpp
+trees/0__practice.cpp
 basic/a.out
+trees/a.out
+
